@@ -1,3 +1,7 @@
+2007-01-22	Frank Richter	<frank.richter@gmail.com>
+
+* Add ability to create OSGK_Strings from client code.
+
 2007-12-24	Frank Richter	<frank.richter@gmail.com>
 
 * Specify 'hidden' visibility flags when building with gcc.
